--- a/Scripts/Server.ipynb
+++ b/Scripts/Server.ipynb
@@ -12,7 +12,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-29T14:09:05.461Z"
+     "start_time": "2019-05-29T14:14:37.663Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Server listening....\n",
-      "Got connection from ('172.21.35.71', 59776)\n",
+      "Got connection from ('172.21.35.71', 60038)\n",
       "file opened\n",
       "receiving data...\n",
       "receiving data...\n",
@@ -185,19 +185,24 @@
       "receiving data...\n",
       "receiving data...\n",
       "receiving data...\n",
-      "Successfully get the file\n"
+      "Successfully get the file\n",
+      "File Removed!\n"
      ]
     }
    ],
    "source": [
     "import socket                   # Import socket module\n",
-    "\n",
+    "import os\n",
+    "import pickle\n",
     "HEADERSIZE = 40\n",
     "port = 60000                    # Reserve a port for your service.\n",
     "s = socket.socket()             # Create a socket object\n",
     "host = socket.gethostname()     # Get local machine name\n",
     "s.bind((host, port))            # Bind to the port\n",
     "s.listen(5)                     # Now wait for client connection.\n",
+    "\n",
+    "loaded_model = pickle.load(open(\"./classifiers/GaussianNB\", 'rb'))    # Model for image classification\n",
+    "\n",
     "\n",
     "print ('Server listening....')\n",
     "\n",
@@ -207,14 +212,14 @@
     "    \n",
     "    header = conn.recv(HEADERSIZE)\n",
     "    \n",
-    "    filename = './ReceivedImages/' + header.decode()\n",
+    "    filepath = './ReceivedImages/' + header.decode()\n",
     "    \n",
     "    \n",
-    "    with open(filename, 'wb') as f:\n",
+    "    with open(filepath, 'wb') as f:\n",
     "        print ('file opened')\n",
     "        \n",
+    "        print('receiving data...')\n",
     "        while True:\n",
-    "            print('receiving data...')\n",
     "            data = conn.recv(1024)\n",
     "            \n",
     "            if not data:\n",
@@ -224,16 +229,38 @@
     "\n",
     "    f.close()\n",
     "    print('Successfully get the file')\n",
+    "    \n",
+    "    result = loaded_model.predict([extract_plot_hist(Image.open(filepath,'wb'))])\n",
+    "    if(!result):\n",
+    "        os.remove(filepath)\n",
+    "        print(\"File Removed!\")\n",
+    "    else:\n",
+    "        print(\"File saved!\")\n",
     "    conn.close()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-29T14:36:22.939966Z",
+     "start_time": "2019-05-29T14:36:22.898082Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image\n",
+    "import cv2\n",
+    "def extract_hist(img):\n",
+    "    color = ('b','g','r')\n",
+    "    histogram = np.empty([3,256])\n",
+    "    for channel,col in enumerate(color):\n",
+    "        histr = cv2.calcHist([np.asarray(img)],[channel],None,[256],[0,256])\n",
+    "        histogram[channel] = np.transpose(histr)\n",
+    "    return histogram.ravel()"
+   ]
   }
  ],
  "metadata": {
